--- a/client/index.html
+++ b/client/index.html
@@ -57,6 +57,7 @@
         <tfoot>
         </tfoot>
     </table>
+    <script src="js/app/models/Codigo.js"></script>
     <script src="js/app/models/Negociacao.js"></script>
     <script src="js/app/models/ListaNegociacoes.js"></script>
     <script src="js/app/controllers/NegociacaoController.js"></script>
