--- a/client/index.html
+++ b/client/index.html
@@ -33,7 +33,7 @@
     </form>
     
     <div class="text-center">
-        <button class="btn btn-primary text-center" type="button">
+        <button onclick="negociacaoController.importaNegociacoes()" class="btn btn-primary text-center" type="button">
             Importar Negociações
         </button>
         <button class="btn btn-primary text-center" type="button" onclick="negociacaoController.apagaNegociacoes()">
@@ -56,7 +56,7 @@
     <script src="js/app/views/MensagemView.js"></script>
     <script src="js/app/services/ProxyFactory.js"></script>
     <script src="js/app/helpers/Bind.js"></script>
-
+    <script src="js/app/services/NegociacaoService.js"></script>
     <script>
         let negociacaoController = new NegociacaoController();
     </script>
