--- a/exercicios/padrao-proxy/proxy.html
+++ b/exercicios/padrao-proxy/proxy.html
@@ -86,23 +86,23 @@
 	lista2.adiciona(new Negociacao(new Date(), 1, 100));
 	lista2.esvazia();
 
-	let funcionario = {email: 'abc@abc.com'};
-
-	let funcionarioProxy = new Proxy(funcionario, {
-		get: function (target, prop, receiver) {
-			console.log(` Valor original no get ${target[prop]}`);
-			console.log(`Armadilha aqui de get`);
-			return `**${Reflect.get(target, prop, receiver)}**`;
-		},
-		set: function (target, prop, value, receiver) {
-			console.log(` Valor anterior no set ${target[prop]}`);
-			console.log(`Armadilha aqui de set`);
-			return Reflect.set(target, prop, value, receiver);
-		}
-	})
-
-	funcionarioProxy.email = 'xyz@xyz.com';
-	console.log(funcionarioProxy.email);
+	// let funcionario = {email: 'abc@abc.com'};
+	//
+	// let funcionarioProxy = new Proxy(funcionario, {
+	// 	get: function (target, prop, receiver) {
+	// 		console.log(` Valor original no get ${target[prop]}`);
+	// 		console.log(`Armadilha aqui de get`);
+	// 		return `**${Reflect.get(target, prop, receiver)}**`;
+	// 	},
+	// 	set: function (target, prop, value, receiver) {
+	// 		console.log(` Valor anterior no set ${target[prop]}`);
+	// 		console.log(`Armadilha aqui de set`);
+	// 		return Reflect.set(target, prop, value, receiver);
+	// 	}
+	// })
+	//
+	// funcionarioProxy.email = 'xyz@xyz.com';
+	// console.log(funcionarioProxy.email);
 
 
 	// class Funcionario {
