CURSO 2: Aprofundando em MVC, padrão Proxy e Factory Aula 06: Exercicio bonus - Alterações para adaptacao em outros browsers

--- a/client/index.html
+++ b/client/index.html
@@ -45,6 +45,7 @@
 
     <div id="negociacoesView"></div>
 
+    <script src="js/app/polyfill/es6.js"></script>
     <script src="js/app/models/Codigo.js"></script>
     <script src="js/app/models/Negociacao.js"></script>
     <script src="js/app/models/ListaNegociacoes.js"></script>
@@ -58,6 +59,7 @@
     <script src="js/app/helpers/Bind.js"></script>
     <script src="js/app/services/NegociacaoService.js"></script>
     <script src="js/app/services/HttpService.js"></script>
+
     <script>
         var negociacaoController = new NegociacaoController();
     </script>
