--- a/client/aprendendo_indexeddb.html
+++ b/client/aprendendo_indexeddb.html
@@ -5,27 +5,89 @@
 	<title>Title</title>
 </head>
 <body>
+<script src="js/app/models/Negociacao.js"></script>
 <script>
 
+	var connection;
 	// O método indexedDB.open() retorna uma instância de IDBOpenDBRequest, ou seja, uma requisição de abertura do banco.
-	var openRequest = window.indexedDB.open("aluraframe",1);
+	var openRequest = window.indexedDB.open("aluraframe", 3);
 
 	// Precisaremos lidar com um tríade de eventos disparados quando tentarmos acessar um banco no IndexedDB.
 
 	openRequest.onupgradeneeded = evento => {
 		console.log(evento);
 		console.log('Cria ou altera um banco já existente');
+		var minhaConnection = evento.target.result;
+
+		if(minhaConnection.objectStoreNames.contains('negociacoes')) {
+			minhaConnection.deleteObjectStore('negociacoes');
+		}
+		minhaConnection.createObjectStore('negociacoes', { autoIncrement: true });
+
 	};
 
 	openRequest.onsuccess = evento => {
 		console.log(evento);
 		console.log('Conexão obtida com sucesso');
+		connection = evento.target.result;
 	};
 
 	openRequest.onerror = evento => {
 		console.log(evento);
 		console.log(evento.target.error);
 	};
+
+	function adiciona() {
+		let transaction = connection.transaction(['negociacoes'], 'readwrite');
+
+		// Por meio da store, conseguiremos fazer transações de persistência(gravar, incluir, alterar e listar).
+		let store = transaction.objectStore('negociacoes');
+
+		// Criamos uma negociação para gravar na Store usando o store.add().
+		let negociacao = new Negociacao(new Date(), 1, 200);
+
+		// Requisição pedindo que a store realize a gravação
+		let request = store.add(negociacao);
+
+		// Verificamos se a request teve sucesso ou falha
+
+		request.onsuccess = e => {
+			console.log('Negociação incluída com sucesso');
+		};
+
+		request.onerror = e => {
+			console.log('Não foi possível incluir a negociação');
+		};
+	}
+
+	function listaTodos() {
+
+		let transaction = connection.transaction(['negociacoes'], 'readwrite');
+		let store = transaction.objectStore('negociacoes');
+		let negociacoes = [];
+
+		// O cursor é um objeto especial que nos permitirá iterar sobre todas as negociações armazenadas em nossa store.
+		let cursor = store.openCursor();
+
+		//
+		cursor.onsuccess = e => {
+			let atual = e.target.result;
+			if (atual) {
+				let dado = atual.value;
+				negociacoes.push(new Negociacao(dado._data, dado._quantidade, dado._valor));
+				atual.continue();
+			} else {
+				// quando não há mais objects em nossa store.
+				// Isso significa que já terminados de popular negociacoes
+				console.log(negociacoes);
+			}
+		};
+
+		cursor.onerror = e => {
+			console.log('Error:' + e.target.error.name);
+		};
+
+	}
 
 </script>
 </body>
